tests/ui/missing-item.stderr
error: unexpected end of input, expected `item`
 --> $DIR/missing-item.rs:8:1
  |
8 | #[async_stream] //~ ERROR unexpected end of input, expected `item`
  | ^^^^^^^^^^^^^^^

error: aborting due to previous error

